<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Workout Notebook</string>

    <!-- FACEBOOK PURPOSE -->
    <string name="facebook_application_id" translatable="false">1132242497170089</string>
    <string name="fb_login_protocol_scheme" translatable="false" tools:ignore="UnusedResources">fb1132242497170089</string>

    <!-- Connection Activity -->
    <string name="authentication_succeed">Successful authentication</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="error_no_internet">No internet connection</string>
    <string name="error_unknown_error">An unknown error has occurred</string>

    <!-- Main Activity  && contentDescription -->
    <string name="disconnect">Sign out?</string>
    <string name="user_data_updated">User data updated</string>
    <string name="update_data_canceled">Update data canceled</string>
    <string name="edit_profile">Edit profile</string>
    <string name="add">add</string>
    <string name="save">save</string>
    <string name="search">search</string>

    <!-- Profile Fragment -->
    <string name="profile_photo">Photo chosen for profile</string>
    <string name="nick_name">Nickname</string>
    <string name="name">Name</string>
    <string name="first_name">First name</string>
    <string name="age">Age</string>
    <string name="sports_practiced">Sports practiced</string>
    <string name="user_data_recovery_error">User data recovery error</string>

    <!-- Request Permissions -->
    <string name="permission_needed">Permission needed</string>
    <string name="rationale_permission_read_external_storage">This permission is required to access your external storage</string>
    <string name="permission_denied">Permission denied</string>
    <string name="never_ask_again">Never ask again</string>

    <!-- Sports Fragment -->
    <string name="next_training_session">Next training session</string>
    <string name="next_training_session_data">%1$s\n%2$s</string>
    <string name="no_upcoming_training_session">No upcoming training session</string>
    <string name="start_training_session">Start the training session</string>
    <string name="exercises">Exercises</string>
    <string name="workouts">Workouts</string>
    <string name="no_network">Lost network connection</string>

    <!-- Exercise / Workout / Series -->
    <string name="exercise_name">Exercise name</string>
    <string name="rest_between_sets">Rest between sets</string>
    <string name="seconds">seconds</string>
    <string name="time">time</string>
    <string name="rest_next_exercise">Rest next exercise</string>
    <string name="reps">reps</string>
    <string name="multiply">*</string>
    <string name="number_units">no of</string>
    <string name="unit">unit</string>
    <string name="first_set">Set 1</string>
    <string name="number_set">Set %d</string>
    <string name="add_a_set">Add a set</string>

    <string name="exercise_name_already_exists">This exercise already exists, please choose another name</string>
    <string name="exercise_name_cannot_be_blank">Exercise name cannot be blank</string>
    <string name="sets_cannot_be_empty">Sets cannot be empty</string>
    <string name="new_exercise_created">Exercise %s is created</string>
    <string name="exercise_updated">Exercise %s is updated</string>
    <string name="series_deleted">Sets deleted</string>
    <string name="exercise_deleted">Exercise deleted</string>
    <string name="add_an_exercise">Add an exercise</string>
    <string name="no_exercise">There is no exercise</string>

    <string name="workout_name_already_exists">This workout already exists, please choose another name</string>
    <string name="workout_deleted">Workout deleted</string>
    <string name="workout_name">Workout Name</string>
    <string name="workout_name_cannot_be_blank">Workout name cannot be blank</string>
    <string name="exercises_cannot_be_empty">Exercises cannot be empty</string>
    <string name="new_workout_created">Workout %s is created</string>
    <string name="workout_updated">Workout %s is updated</string>
    <string name="add_a_workout">Add a workout</string>
    <string name="no_workout">There is no workout</string>

    <string name="undo">UNDO</string>

    <!-- Edit Calendar Fragment -->
    <string name="training_sessions">Training sessions</string>
    <string name="new_training_session_created">Training session for %s is created</string>
    <string name="add_training_session">Add a training session</string>
    <string name="update_training_session">Update a training session</string>
    <string name="date_training_session">Date</string>
    <string name="time_training_session">Time</string>
    <string name="training_session_updated">Training session updated</string>
    <string name="add_date_time_workout">Add a date, time and workout</string>
    <string name="delete_this_training_session">Delete this training session?</string>
    <string name="training_session_deleted">Training session deleted</string>
    <string name="training_session_time_already_exists">A training session at this time already exists, please choose another time</string>
    <string name="cannot_create_update_training_session_with_past_date">Cannot create or update a training session with a past date</string>
    <string name="cannot_update_completed_training_session">Cannot update a completed training session</string>

    <!-- TrainingSession Fragment -->
    <string name="go">GO</string>
    <string name="start_rest_time">Start the rest time</string>
    <string name="pause">PAUSE</string>
    <string name="save_training_session">Save the training session</string>
    <string name="quit_without_saving">Quit without saving</string>
    <string name="quit_and_save">Quit and save</string>
    <string name="training_session_completed">Training session completed</string>

    <!-- Statistics Fragment -->
    <string name="choose_exercise">Set dates, unit then exercise</string>
    <string name="no_data">No data for %s"</string>
    <string name="repetitions">Repetitions</string>
    <string name="reps_or_unit">reps or unit</string>
    <string name="entry_date">Date of entry</string>
    <string name="end_date">Date of end</string>
    <string name="entry_date_cannot_be_after_end_date">Entry date cannot be after end date</string>

    <!-- Community Fragment -->
    <string name="follow">Follow</string>
    <string name="followers">Followers</string>

    <!-- Search Fragment -->
    <string name="search_by_names">Search by names</string>
    <string name="search_no_result">There are no results for your query</string>

    <!-- Follower Fragment -->
    <string name="person_to_follow_added">Person to follow added</string>
    <string name="person_already_followed">This person is already followed</string>
    <string name="no_longer_follow">No longer follow</string>
    <string name="person_no_longer_followed">This person is no longer being followed</string>
    <string name="historical">Historical</string>

    <!-- Historical Fragment -->
    <string name="no_historical_training_sessions">There are no historical training sessions</string>

    <!-- Used for the Notifications -->
    <string name="channel_name">"Channel</string>
    <string name="channel_description">Channel for notifications</string>
    <string name="notification_text">You must start your training session for %s in one hour!</string>

    <!-- Animations -->
    <string name="animation_profile_photo_list_to_detail" translatable="false">Animation profile photo list to detail</string>
</resources>