<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.jpz.workoutnotebook.utils.DataBindingConverters" />

        <variable
            name="series"
            type="com.jpz.workoutnotebook.models.Series" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/seriesItemCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        app:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/exercise_widget_margin">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/seriesItemName"
                style="@style/ExerciseTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/exercise_widget_margin"
                android:hint="@string/first_set"
                android:text="@={series.seriesName}"
                app:layout_constraintBaseline_toBaselineOf="@+id/seriesItemReps"
                app:layout_constraintEnd_toStartOf="@+id/seriesItemReps"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/seriesItemReps"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/repetitions"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:helperText="@string/repetitions"
                app:layout_constraintEnd_toStartOf="@+id/seriesItemMultiply"
                app:layout_constraintStart_toEndOf="@+id/seriesItemName">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="@={DataBindingConverters.convertIntegerToString(series.reps)}"
                    android:textColor="@color/colorTextPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/seriesItemMultiply"
                style="@style/ExerciseTextViewTheme"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/exercise_widget_margin"
                android:text="@string/multiply"
                app:layout_constraintBaseline_toBaselineOf="@+id/seriesItemNumberOfUnit"
                app:layout_constraintEnd_toStartOf="@+id/seriesItemNumberOfUnit"
                app:layout_constraintStart_toEndOf="@+id/seriesItemReps" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/seriesItemNumberOfUnit"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:hint="@string/number_units"
                app:counterEnabled="true"
                app:counterMaxLength="5"
                app:helperText="@string/number_units"
                app:layout_constraintEnd_toStartOf="@+id/seriesItemUnit"
                app:layout_constraintStart_toEndOf="@+id/seriesItemMultiply">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="numberDecimal"
                    android:maxLength="5"
                    android:text="@={DataBindingConverters.convertDoubleToString(series.numberOfUnit)}"
                    android:textColor="@color/colorTextPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/seriesItemUnit"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/exercise_widget_margin"
                android:hint="@string/unit"
                app:helperText="@string/unit"
                app:layout_constraintBaseline_toBaselineOf="@+id/seriesItemNumberOfUnit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/seriesItemNumberOfUnit">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="none"
                    android:labelFor="@id/seriesItemUnit"
                    android:text="@={series.unit}"
                    tools:ignore="LabelFor" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>