<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileFragmentCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_profile"
    tools:context=".fragments.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/profileFragmentGuidelineStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/profileFragmentGuidelineEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <ImageView
            android:id="@+id/profileFragmentImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintBottom_toTopOf="@+id/profileFragmentNickname"
            app:layout_constraintEnd_toEndOf="@id/profileFragmentGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/profileFragmentGuidelineStart"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFragmentNickname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nick_name"
            app:layout_constraintBottom_toTopOf="@+id/profileFragmentName"
            app:layout_constraintEnd_toEndOf="@id/profileFragmentGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/profileFragmentGuidelineStart"
            app:layout_constraintTop_toBottomOf="@id/profileFragmentImage">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/colorTextSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFragmentName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            app:layout_constraintBottom_toTopOf="@+id/profileFragmentFirstName"
            app:layout_constraintEnd_toEndOf="@id/profileFragmentGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/profileFragmentGuidelineStart"
            app:layout_constraintTop_toBottomOf="@id/profileFragmentNickname">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/colorTextSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFragmentFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            app:layout_constraintBottom_toTopOf="@+id/profileFragmentAge"
            app:layout_constraintEnd_toEndOf="@id/profileFragmentGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/profileFragmentGuidelineStart"
            app:layout_constraintTop_toBottomOf="@id/profileFragmentName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/colorTextSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFragmentAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/age"
            app:layout_constraintBottom_toTopOf="@+id/profileFragmentSports"
            app:layout_constraintEnd_toEndOf="@id/profileFragmentGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/profileFragmentGuidelineStart"
            app:layout_constraintTop_toBottomOf="@id/profileFragmentFirstName">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/colorTextSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/profileFragmentSports"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/sports_practiced"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/profileFragmentGuidelineEnd"
            app:layout_constraintStart_toStartOf="@id/profileFragmentGuidelineStart"
            app:layout_constraintTop_toBottomOf="@id/profileFragmentAge">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:enabled="false"
                android:textColor="@color/colorTextSecondary" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>